--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,35 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Stripe
+STRIPE_SECRET_KEY=
+STRIPE_PUB_KEY=
+
+# Authorize.Net
+AUTHORIZE_NET_API_LOGIN_ID=
+AUTHORIZE_NET_TRANSACTION_KEY=
+AUTHORIZE_NET_ENV=sandbox
+
+# Salesforce
+SF_CLIENT_ID=
+SF_CLIENT_SECRET=
+SF_USERNAME=
+SF_PASSWORD=
+SF_SECURITY_TOKEN=
+SF_LOGIN_URL=https://login.salesforce.com
+
+# GoDirect
+GODIRECT_SANDBOX=true
+GODIRECT_URL=
+GODIRECT_ACTION=
+GODIRECT_USERNAME=
+GODIRECT_PASSWORD=
+
+# ReCaptcha
+RECAPTCHA_SITEKEY=
+RECAPTCHA_SECRET=
+
+# Instagram
+INSTAGRAM_ACCESS_TOKEN=
+INSTAGRAM_USER_ID=
